--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "animate.css": "^4.1.1",
-    "bulma": "^0.9.4"
+    "bulma": "^0.9.4",
+    "bulma-modal-fx": "^1.1.1"
   }
 }
