--- a/package.json
+++ b/package.json
@@ -2,22 +2,9 @@
   "name": "wikiliq-adsmanager",
   "version": "0.0.2",
   "license": "MIT",
-  "scripts": {
-    "dev": "parcel index.html",
-    "build": "parcel build index.html"
-  },
-  "devDependencies": {
-    "@parcel/packager-raw-url": "^2.8.3",
-    "@parcel/packager-xml": "^2.8.3",
-    "@parcel/transformer-webmanifest": "^2.8.3",
-    "@parcel/transformer-xml": "^2.8.3",
-    "parcel": "^2.6.2"
-  },
   "dependencies": {
-    "@cubejs-client/core": "^0.31.0",
     "animate.css": "^4.1.1",
     "bulma": "^0.9.4",
-    "bulma-modal-fx": "^1.1.1",
-    "chart.js": "^4.2.1"
+    "bulma-modal-fx": "^1.1.1"
   }
 }
