--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "bulma-modal-fx": "^1.1.1"
   },
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "browser-sync": "^2.29.1",
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify-es": "^3.0.0"
   }
 }
