--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "devDependencies": {
     "browser-sync": "^2.29.1",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-uglify-es": "^3.0.0"
+    "gulp-less": "^5.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-uglify-es": "^3.0.0",
+    "sass": "^1.62.1"
   }
 }
