--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "alpinejs": "^3.12.0",
     "animate.css": "^4.1.1",
     "bulma": "^0.9.4",
+    "bulma-calendar": "^6.1.19",
     "bulma-modal-fx": "^1.1.1"
   },
   "devDependencies": {
