--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "animate.css": "^4.1.1",
     "bulma": "^0.9.4",
     "bulma-calendar": "^6.1.19",
-    "bulma-modal-fx": "^1.1.1"
+    "bulma-modal-fx": "^1.1.1",
+    "simple-jscalendar": "^1.4.4"
   },
   "devDependencies": {
     "browser-sync": "^2.29.1",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
+    "gulp-autoprefixer": "^6.1.0",
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
